Sync'ed kernel version to VyOS's 4.4.47 and added VyOS patches

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -18,3 +18,5 @@ EXTRA_USERS_PARAMS = "\
         -p '' vyos; \
     usermod -P vyos vyos; \
     "
+
+PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
