- fixes for quagga recipe

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -13,10 +13,24 @@ INHERIT += "extrausers"
 EXTRA_USERS_PARAMS = "\
     groupadd -r vyattacfg; \
     groupadd -r vyattaop; \
-    useradd -d /home/vyos -r -U -s /bin/vbash \
-        -G adm,sudo,dip,disk,vyattacfg,vyattaop \
-        -p '' vyos; \
+    groupadd -r quaggavty; \
+    useradd \
+        --home /home/vyos \
+        --system \
+        --user-group \
+        --shell /bin/vbash \
+        --groups adm,sudo,dip,disk,vyattacfg,vyattaop,quaggavty \
+        --password '' \
+        vyos; \
     usermod -P vyos vyos; \
+    useradd \
+        --home /var/run/quagga \
+        --system \
+        --user-group \
+        --shell /bin/false \
+        --comment Vyatta_Quagga_routing_suite \
+        --password '' \
+        quagga; \
     "
 
 PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
