--- a/recipes-core/busybox/files/fragment.cfg
+++ b/recipes-core/busybox/files/fragment.cfg
@@ -30,3 +30,6 @@ CONFIG_FEATURE_SH_IS_NONE=y
 # CONFIG_SH_MATH_SUPPORT is not set
 # CONFIG_FEATURE_SH_EXTRA_QUIET is not set
 # CONFIG_FEATURE_SH_HISTFILESIZE is not set
+# CONFIG_START_STOP_DAEMON is not set
+# CONFIG_FEATURE_START_STOP_DAEMON_FANCY is not set
+# CONFIG_FEATURE_START_STOP_DAEMON_LONG_OPTIONS is not set
