make vyos user part of 'users' group

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -14,12 +14,13 @@ EXTRA_USERS_PARAMS = "\
     groupadd -r vyattacfg; \
     groupadd -r vyattaop; \
     groupadd -r quaggavty; \
+    groupadd -r fuse; \
     useradd \
         --home /home/vyos \
         --system \
-        --user-group \
+        --gid users \
         --shell /bin/vbash \
-        --groups adm,sudo,dip,disk,vyattacfg,vyattaop,quaggavty \
+        --groups adm,sudo,dip,disk,vyattacfg,quaggavty,fuse \
         --password '' \
         vyos; \
     usermod -P vyos vyos; \
