--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -1,8 +1,7 @@
 
-require conf/distro/poky.conf
-
-DISTRO = "vyos"
-DISTROOVERRIDES = "poky"
+# we install dpkg anyways, might as well use .deb packages installed of the
+# default .ipk
+PACKAGE_CLASSES = "package_deb"
 
 DISTRO_FEATURES_append = " pam vyos"
 
@@ -34,4 +33,4 @@ EXTRA_USERS_PARAMS = "\
         quagga; \
     "
 
-PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
+#PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
