--- a/recipes-core/busybox/files/fragment.cfg
+++ b/recipes-core/busybox/files/fragment.cfg
@@ -33,3 +33,4 @@ CONFIG_FEATURE_SH_IS_NONE=y
 # CONFIG_START_STOP_DAEMON is not set
 # CONFIG_FEATURE_START_STOP_DAEMON_FANCY is not set
 # CONFIG_FEATURE_START_STOP_DAEMON_LONG_OPTIONS is not set
+CONFIG_ARP=y
