adding IPsec VPN packages

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -3,7 +3,7 @@
 # default .ipk
 PACKAGE_CLASSES = "package_deb"
 
-DISTRO_FEATURES_append = " pam vyos"
+DISTRO_FEATURES_append = " pam vyos-core vyos-vpn"
 
 # Image level user/group configuration.
 # Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
