switching to kernel with VyOS patches

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -33,4 +33,4 @@ EXTRA_USERS_PARAMS = "\
         quagga; \
     "
 
-#PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
+PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
