--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -1,9 +1,28 @@
 
-# we install dpkg anyways, might as well use .deb packages installed of the
+# we install dpkg anyways, might as well use .deb packages instead of the
 # default .ipk
 PACKAGE_CLASSES = "package_deb"
 
-DISTRO_FEATURES_append = " pam vyos-core vyos-vpn"
+DISTRO_FEATURES_append = " \
+    pam \
+    vyos-core \
+    vyos-config \
+    vyos-net \
+    vyos-wlan \
+    vyos-routing \
+    vyos-wwan \
+    vyos-tunnel \
+    vyos-vpn \
+    vyos-qos \
+    vyos-pppoe \
+    vyos-dhcp \
+    vyos-monitor \
+    vyos-firewall \
+    vyos-redundancy \
+    vyos-proxy \
+    "
+
+
 
 # Image level user/group configuration.
 # Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
