ported all relevant VyOS strongswan patches

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -5,6 +5,7 @@ PACKAGE_CLASSES = "package_deb"
 
 DISTRO_FEATURES_append = " \
     pam \
+    ldap \
     vyos-core \
     vyos-config \
     vyos-net \
