--- a/recipes-core/busybox/files/fragment.cfg
+++ b/recipes-core/busybox/files/fragment.cfg
@@ -46,3 +46,24 @@ CONFIG_IFUPDOWN_IFSTATE_PATH=""
 # CONFIG_NETSTAT is not set
 # CONFIG_ROUTE is not set
 CONFIG_IFUPDOWN_UDHCPC_CMD_OPTIONS=""
+# CONFIG_LFS is not set
+CONFIG_MD5_SMALL=0
+CONFIG_SHA3_SMALL=0
+CONFIG_FEATURE_ETC_NETWORKS=y
+# CONFIG_FEATURE_EDITING is not set
+CONFIG_FEATURE_EDITING_MAX_LEN=0
+CONFIG_FEATURE_EDITING_HISTORY=0
+# CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
+# CONFIG_FEATURE_TAB_COMPLETION is not set
+# CONFIG_FEATURE_USERNAME_COMPLETION is not set
+# CONFIG_FEATURE_EDITING_FANCY_PROMPT is not set
+# CONFIG_FEATURE_HWIB is not set
+CONFIG_FDISK_SUPPORT_LARGE_DISKS=y
+# CONFIG_UDHCPD is not set
+# CONFIG_DUMPLEASES is not set
+CONFIG_DHCPD_LEASES_FILE=""
+# CONFIG_UDHCPC is not set
+# CONFIG_FEATURE_UDHCPC_ARPING is not set
+# CONFIG_FEATURE_UDHCPC_SANITIZEOPT is not set
+CONFIG_UDHCPC_DEFAULT_SCRIPT=""
+CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=0
