disable busybox modprobe

--- a/recipes-core/busybox/files/fragment.cfg
+++ b/recipes-core/busybox/files/fragment.cfg
@@ -67,3 +67,13 @@ CONFIG_DHCPD_LEASES_FILE=""
 # CONFIG_FEATURE_UDHCPC_SANITIZEOPT is not set
 CONFIG_UDHCPC_DEFAULT_SCRIPT=""
 CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=0
+# CONFIG_INSMOD is not set
+# CONFIG_RMMOD is not set
+# CONFIG_LSMOD is not set
+# CONFIG_MODPROBE is not set
+# CONFIG_DEPMOD is not set
+# CONFIG_FEATURE_CHECK_TAINTED_MODULE is not set
+# CONFIG_FEATURE_MODUTILS_ALIAS is not set
+# CONFIG_FEATURE_MODUTILS_SYMBOLS is not set
+CONFIG_DEFAULT_MODULES_DIR=""
+CONFIG_DEFAULT_DEPMOD_FILE=""
