- switched from yocto kernel to generic kernel - cleaned up kernel config - cleaned up package features

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -3,6 +3,37 @@
 # default .ipk
 PACKAGE_CLASSES = "package_deb"
 
+
+# Disable unnecessary DISTRO_FEATURES and MACHINE_FEATURES here
+DISTRO_FEATURES_remove = " \
+    alsa \
+    bluetooth \
+    cramfs \
+    directfb \
+    irda \
+    nfs \
+    opengl \
+    pcmcia \
+    smbfs \
+    usbgadget \
+    wayland \
+    x11 \
+    nfc \
+    3g \
+    "
+
+MACHINE_FEATURES_remove = " \
+    alsa \
+    bluetooth \
+    irda \
+    pcmcia \
+    phone \
+    qvga \
+    touchscreen \
+    usbgadget \
+    "
+
+
 DISTRO_FEATURES_append = " \
     pam \
     ldap \
@@ -53,4 +84,5 @@ EXTRA_USERS_PARAMS = "\
         quagga; \
     "
 
+PREFERRED_PROVIDER_virtual/kernel = "linux-vyos"
 PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
