--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -84,5 +84,6 @@ EXTRA_USERS_PARAMS = "\
         quagga; \
     "
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-vyos"
+#PREFERRED_PROVIDER_virtual/kernel = "linux-vyos"
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
