misc fixes, switch to kernel 4.14

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -1,4 +1,11 @@
 
+# This layer contains kernel patches for a variety of machine-specific
+# kernels using .bbappend files in recipes-kernel/linux. To allow image
+# building without all machine layers being present, we turn 'dangling
+# .bbappend file' errors into warnings
+BB_DANGLINGAPPENDS_WARNONLY = "1"
+
+
 # we install dpkg anyways, might as well use .deb packages instead of the
 # default .ipk
 PACKAGE_CLASSES = "package_deb"
@@ -85,5 +92,5 @@ EXTRA_USERS_PARAMS = "\
     "
 
 #PREFERRED_PROVIDER_virtual/kernel = "linux-vyos"
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
-PREFERRED_VERSION_linux-yocto_qemux86 = "4.4%"
+PREFERRED_PROVIDER_virtual/kernel_qemux86 = "linux-yocto"
+PREFERRED_VERSION_linux-yocto_qemux86 = "4.14%"
