swupdate: does not run on x86 machines

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -1,15 +1,12 @@
-
 # This layer contains kernel patches for a variety of machine-specific
 # kernels using .bbappend files in recipes-kernel/linux. To allow image
 # building without all machine layers being present, we turn 'dangling
 # .bbappend file' errors into warnings
 BB_DANGLINGAPPENDS_WARNONLY = "1"
 
-
 # we install dpkg anyways, might as well use .deb packages instead of the
 # default .ipk
 PACKAGE_CLASSES = "package_deb"
-
 
 # Disable unnecessary DISTRO_FEATURES and MACHINE_FEATURES here
 DISTRO_FEATURES_remove = " \
@@ -40,7 +37,6 @@ MACHINE_FEATURES_remove = " \
     usbgadget \
     "
 
-
 DISTRO_FEATURES_append = " \
     pam \
     ldap \
@@ -62,7 +58,12 @@ DISTRO_FEATURES_append = " \
     vyos-swupdate \
     "
 
-
+# meta-swupdate is not supported by x86 architecture
+X86REMOVE ??= "vyos-swupdate"
+DISTRO_FEATURES_remove_qemux86 = "${X86REMOVE}"
+DISTRO_FEATURES_remove_qemux86-64 = "${X86REMOVE}"
+DISTRO_FEATURES_remove_genericx86 = "${X86REMOVE}"
+DISTRO_FEATURES_remove_genericx86-64 = "${X86REMOVE}"
 
 # Image level user/group configuration.
 # Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
