Autoload 'fuse' module on startup
The VyOS configure command requires that the fuse module is loaded in
order to blend in a "new" configuration.

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -8,6 +8,10 @@ BB_DANGLINGAPPENDS_WARNONLY = "1"
 # default .ipk
 PACKAGE_CLASSES = "package_deb"
 
+# VyOS configuration requires fuse filesystem to work, so autoload module on
+# system bootup
+KERNEL_MODULE_AUTOLOAD += " fuse"
+
 # Disable unnecessary DISTRO_FEATURES and MACHINE_FEATURES here
 DISTRO_FEATURES_remove = " \
     alsa \
