Add VyOS version identifier to distro

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -1,3 +1,8 @@
+DISTRO = "vyos"
+DISTRO_NAME = "VyOS - Network Operating System"
+DISTRO_VERSION = "0.0.1"
+DISTRO_CODENAME = "none"
+
 # This layer contains kernel patches for a variety of machine-specific
 # kernels using .bbappend files in recipes-kernel/linux. To allow image
 # building without all machine layers being present, we turn 'dangling
