layer.conf: configure LAYERDEPENDS variable

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,3 +9,11 @@ BBFILE_PATTERN_meta-vyos := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-vyos = "6"
 
 LICENSE_PATH += "${LAYERDIR}/licenses"
+
+LAYERDEPENDS_meta-vyos = "core"
+LAYERDEPENDS_meta-vyos += "openembedded-layer"
+LAYERDEPENDS_meta-vyos += "networking-layer"
+LAYERDEPENDS_meta-vyos += "meta-python"
+LAYERDEPENDS_meta-vyos += "perl-layer"
+LAYERDEPENDS_meta-vyos += "filesystems-layer"
+LAYERDEPENDS_meta-vyos += "swupdate"
