vyos-iso-image: first bootable version

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -26,6 +26,9 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 DISTRO_FEATURES_append = " systemd"
 
+# required when having all kernel modules inside the initramfs ...
+INITRAMFS_MAXSIZE ?= "262144"
+
 # Disable unnecessary DISTRO_FEATURES and MACHINE_FEATURES here
 DISTRO_FEATURES_remove = " \
     alsa \
