distro: use linux-vyos for genericx86(-64) machines

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -115,6 +115,18 @@ EXTRA_USERS_PARAMS = "\
         quagga; \
     "
 
-#PREFERRED_PROVIDER_virtual/kernel = "linux-vyos"
+#
+# Generic x86 machines should use linux-vyos as Kernel provide
+#
+PREFERRED_PROVIDER_virtual/kernel_genericx86 = "linux-vyos"
+PREFERRED_PROVIDER_virtual/kernel_genericx86-64 = "linux-vyos"
+PREFERRED_VERSION_linux-vyos_genericx86 = "4.4%"
+PREFERRED_VERSION_linux-vyos_genericx86-64 = "4.4%"
+
+#
+# Emulated Images should fallback to linux-yocto
+#
 PREFERRED_PROVIDER_virtual/kernel_qemux86 = "linux-yocto"
+PREFERRED_PROVIDER_virtual/kernel_qemux86-64 = "linux-yocto"
 PREFERRED_VERSION_linux-yocto_qemux86 = "4.14%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 = "4.14%"
