add strace for debugging

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -65,6 +65,7 @@ DISTRO_FEATURES_append = " \
     vyos-redundancy \
     vyos-proxy \
     vyos-swupdate \
+    vyos-debug \
     "
 
 # meta-swupdate is not supported by x86 architecture
