switch to systemd

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -17,6 +17,14 @@ PACKAGE_CLASSES = "package_deb"
 # system bootup
 KERNEL_MODULE_AUTOLOAD += " fuse"
 
+# mirror VyOS's original settings (Yocto uses /home/root as default)
+ROOT_HOME = "/root"
+
+# VyOS shall use systemd
+VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+DISTRO_FEATURES_append = " systemd"
+
 # Disable unnecessary DISTRO_FEATURES and MACHINE_FEATURES here
 DISTRO_FEATURES_remove = " \
     alsa \
