setting OE-VyOS version to 0.1

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -1,6 +1,7 @@
+# This is VyOS for OpenEmbedded
 DISTRO = "vyos"
-DISTRO_NAME = "VyOS - Network Operating System"
-DISTRO_VERSION = "0.0.1"
+DISTRO_NAME = "OE-VyOS - Network Operating System"
+DISTRO_VERSION = "0.1"
 DISTRO_CODENAME = "none"
 
 # This layer contains kernel patches for a variety of machine-specific
