distro: introduce new features vyos-(non-)embedded
Two new distro features are introduced named vyos-embedded and
vyos-non-embedded. At this time only vyos-non-embedded is used in
vyos-op package.

Certain features like SCSI or RAID should only be available in
non-embedded builds (e.g. server hardware) where you have a RAID/SCSI
controller. Embedded targets on the other hand usually use some onboard
FLASH for storing the images.

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -86,6 +86,8 @@ DISTRO_FEATURES_remove_qemux86 = "${X86REMOVE}"
 DISTRO_FEATURES_remove_qemux86-64 = "${X86REMOVE}"
 DISTRO_FEATURES_remove_genericx86 = "${X86REMOVE}"
 DISTRO_FEATURES_remove_genericx86-64 = "${X86REMOVE}"
+DISTRO_FEATURES_append_x86 = " vyos-non-embedded"
+DISTRO_FEATURES_append_x86-64 = " vyos-non-embedded"
 
 # Image level user/group configuration.
 # Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
