distro: cleanup dependencies on vyos-swupdate
... the swupdate part in now only included for ARM machines in the
beginning. Rather make this software update mechanism configurable per
architecture instead of enabling it by default.

It will be enabled for MIPS platform as soon as I get it to boot on the
EdgeRouter Pro.

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -76,18 +76,16 @@ DISTRO_FEATURES_append = " \
     vyos-firewall \
     vyos-redundancy \
     vyos-proxy \
-    vyos-swupdate \
     vyos-debug \
     "
 
-# meta-swupdate is not supported by x86 architecture
-X86REMOVE ??= "vyos-swupdate"
-DISTRO_FEATURES_remove_qemux86 = "${X86REMOVE}"
-DISTRO_FEATURES_remove_qemux86-64 = "${X86REMOVE}"
-DISTRO_FEATURES_remove_genericx86 = "${X86REMOVE}"
-DISTRO_FEATURES_remove_genericx86-64 = "${X86REMOVE}"
 DISTRO_FEATURES_append_x86 = " vyos-non-embedded"
 DISTRO_FEATURES_append_x86-64 = " vyos-non-embedded"
+
+DISTRO_FEATURES_append_arm = " \
+    vyos-embedded \
+    vyos-swupdate \
+    "
 
 # Image level user/group configuration.
 # Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
