layer: add LAYERSERIES_COMPAT for 'sumo'

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,3 +17,5 @@ LAYERDEPENDS_meta-vyos += "meta-python"
 LAYERDEPENDS_meta-vyos += "perl-layer"
 LAYERDEPENDS_meta-vyos += "filesystems-layer"
 LAYERDEPENDS_meta-vyos += "swupdate"
+
+LAYERSERIES_COMPAT_meta-vyos = "sumo"
