change journald default config

--- a/recipes-core/systemd/files/journald.conf
+++ b/recipes-core/systemd/files/journald.conf
@@ -34,10 +34,10 @@
 ForwardToSyslog=yes
 #ForwardToKMsg=no
 #ForwardToConsole=no
-#ForwardToWall=yes
+ForwardToWall=no
 #TTYPath=/dev/console
 #MaxLevelStore=debug
 MaxLevelSyslog=debug
 #MaxLevelKMsg=notice
-#MaxLevelConsole=info
+MaxLevelConsole=alert
 #MaxLevelWall=emerg
