support linux-mtk alongside linux-vyos (for now)

--- a/conf/distro/vyos.conf
+++ b/conf/distro/vyos.conf
@@ -115,4 +115,7 @@ EXTRA_USERS_PARAMS = "\
         quagga; \
     "
 
+# Ideally, all VyOS builds should use the same kernel, however
+# this goal may not be easily attainable for embedded platforms that
+# require custom patches or newer kernels
 PREFERRED_PROVIDER_virtual/kernel = "linux-vyos"
